# maxwell

./: .gitignore  README.md
python/: electrostatic_test.py  simulation.py
src/: BoundaryCondition.cxx  BoundaryCondition.hxx  CMakeLists.txt  Cell.cxx  Cell.hxx  DataKeeper.cxx  DataKeeper.hxx  DataProcessor.cxx  DataProcessor.hxx  Doxyfile  ElectrostaticDataKeeper.cxx  ElectrostaticDataKeeper.hxx  ElectrostaticKernel.cxx  ElectrostaticKernel.hxx  ElectrostaticSimManager.cxx  ElectrostaticSimManager.hxx  Field.hxx  Interface.cxx  Matrix.cxx  Matrix.hxx  MatrixFEM.cxx  MatrixFEM.hxx  Mesh.cxx  Mesh3D.cxx  Mesh3D.hxx  Node.cxx  Node.hxx  ScalarField.cxx  ScalarField.hxx  SimManager.cxx  SimManager.hxx  SparseMatrix.cxx  SparseMatrix.hxx  UnsteadyField.hxx  UnsteadyMaxwellKernel.cxx  UnsteadyMaxwellKernel.hxx  Vec3D.cxx  Vec3D.hxx  VectorField.cxx  VectorField.hxx  (+2 more)
